# tek-injector

./: .gitignore  BUILD.md  LICENSE  README.md  main.c  memscan.cpp  memscan.h  meson.build  tek-injector.manifest  tek-injector.rc  vm-stubs.s  x86_64-windows-clang.ini
include/: tek-injector.h
res/: libtek-injector.rc.in  tek-injector.manifest.in  tek-injector.rc.in
src/: exe.cpp  lib.cpp
